Fixed form content to be in hebrew - add image to models

--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -54,67 +54,67 @@
 									<section class="dog_search_first_section"> 
 										<label class="radio_botton_label">
 											<h3>מין</h3>
-											<input type="radio" name="gender" value="female"><span class="radio_botton">שניהם</span>
-											<input type="radio" name="gender" value="male"><span class="radio_botton">זכר</span>
-											<input type="radio" name="gender" value="male"><span class="radio_botton">נקבה</span>
+											<input type="radio" name="gender" value="All"><span class="radio_botton">שניהם</span>
+											<input type="radio" name="gender" value=״זכר״><span class="radio_botton">זכר</span>
+											<input type="radio" name="gender" value="נקבה"><span class="radio_botton">נקבה</span>
 										</label>
 										<label class="">
 											<h3>גודל</h3>
 											<select name="dog_size">
 												<option value="All">הכול</option>
-												<option value="small">קטן</option>
-												<option value="medium">בינוני</option>
-												<option value="large">גדול</option>				
+												<option value="קטן">קטן</option>
+												<option value="בינוני">בינוני</option>
+												<option value="גדול">גדול</option>
 											</select>
 										</label>
 										<label class="">
 											<h3>גיל</h3>
 											<select name="dog_age">
 												<option value="All">הכול</option>
-												<option value="puppyhood">גור</option>
-												<option value="adolecence">צעיר</option>
-												<option value="adulthood">בוגר</option>
-												<option value="senior">מבוגר</option>
+												<option value="גור">גור</option>
+												<option value="צעיר">צעיר</option>
+												<option value="בוגר">בוגר</option>
+												<option value="מבוגר">מבוגר</option>
 											</select>
 										</label>
 										<label class="">
 											<h3>גזע</h3>
 											<select name="dog_breed">
 												<option value="All">מעורב</option>
-												<option value="labrador">לברדור</option>
-												<option value="german_shepherd">רועה גרמני</option>
-												<option value="cavalier_spaniel">קבלייר ספניאל</option>
-												<option value="golden_retriever">גולדן רטריבר</option>
-												<option value="boxer">בוקסר</option>
-												<option value="yorkshire_terrier">יורקשיר טרייר</option>
-												<option value="beagle">ביגל</option>
-												<option value="poodle">פודל</option>
-												<option value="shih_tzu">שי טסו</option>
-												<option value="bull_terrier">בול טרייר</option>
-												<option value="border_collie">בורדר קולי</option>
-												<option value="pug">פאג</option>
-												<option value="cocker_spaniel">קוקר ספניאל</option>
-												<option value="dalmatian">דלמטי</option>
-												<option value="rottweiler">רוטווילר</option>
-												<option value="jack_russell">ג'ק ראסל</option>
-												<option value="great_dane">דני ענק</option>
-												<option value="dobermann">דוברמן</option>
-												<option value="maltese">מלטז</option>
-												<option value="french_bulldog">בולדוג צרפתי</option>
-												<option value="chihuahua">צ'יוואווה</option>	
-												<option value="siberian_husky">האסקי סיבירי</option>	
-												<option value="pit_bull">פיט בול</option>	
+												<option value="לברדור">לברדור</option>
+												<option value="רועה גרמני">רועה גרמני</option>
+												<option value="קבלייר ספניאל">קבלייר ספניאל</option>
+												<option value="גולדן רטריבר">גולדן רטריבר</option>
+												<option value="בוקסר">בוקסר</option>
+												<option value="יורקשיר טרייר">יורקשיר טרייר</option>
+												<option value="ביגל">ביגל</option>
+												<option value="פודל">פודל</option>
+												<option value="שי טסו">שי טסו</option>
+												<option value="בול טרייר">בול טרייר</option>
+												<option value="בורדר קולי">בורדר קולי</option>
+												<option value="פאג">פאג</option>
+												<option value="קוקר ספניאל">קוקר ספניאל</option>
+												<option value="דלמטי">דלמטי</option>
+												<option value="רוטווילר">רוטווילר</option>
+												<option value="ג׳ק ראסל">ג'ק ראסל</option>
+												<option value="דני ענק">דני ענק</option>
+												<option value="דוברמן">דוברמן</option>
+												<option value="מלטז">מלטז</option>
+												<option value="בולדוג צרפתי">בולדוג צרפתי</option>
+												<option value="צ׳יוואווה">צ'יוואווה</option>
+												<option value="האסקי סיבירי">האסקי סיבירי</option>
+												<option value="פיט בול">פיט בול</option>
 											</select>
 										</label>
 										<label class="">
 											<h3>צבעים</h3>
 											<select name="dog_color">
 												<option value="all">הכול</option>
-												<option value="red">ג'ינג'י</option>
-												<option value="dark">כהה</option>
-												<option value="yellow">צהוב</option>
-												<option value="black">שחור</option>
-												<option value="white">לבן</option>
+												<option value="ג׳ינג׳י">ג'ינג'י</option>
+												<option value="כהה">כהה</option>
+												<option value="צהוב">צהוב</option>
+												<option value="שחור">שחור</option>
+												<option value="לבן">לבן</option>
 											</select>
 										</label>
 								</section>	
