--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">	
-	    <title>[4] Treasure Island</title>	
+	    <title>Friends for Life</title>	
 		<script src="../../static/js/modernizr.js"></script>
 		<link rel="stylesheet" href="../../static/style/style.css">
 		<link rel="stylesheet" href="../../static/style/styleMobile.css">
@@ -31,8 +31,8 @@
 				             <!--<li class="navBtnAbout">
 				                    <a href="#">אודות</>
 				              </li>-->
-				             <li class="navBtnGallery">
-				                    <a href="#">גלריה</a></a>
+				             <li class="navBtnAbout">
+				                    <a href="#">על העמותה</a>
 				                </li>
 				             <!--<li class="navBtnContact">
 				                    <a href="#">צור קשר</a>
@@ -51,8 +51,12 @@
 						<div class="mainContent">
 							<section class="IndexLeftSide">
 								<article class="IndexLeftSideAdopt">
-									<span class="blueH">אימוץ כלבים</span>
-									<a href="" class="whiteP">אימוץ כלבים, גורים, מבוגרים מכל הגזעים והסוגים - איך מתחילים?</a>
+									<a href="">
+										<h4 class="header">אימוץ כלבים</h4>
+										<p class="paragraph">אימוץ כלבים, גורים, מבוגרים מכל הגזעים והסוגים - איך מתחילים?</p>
+									</a>
+									
+									
 								</article>
 								<article class="IndexLeftSideVolenteer"></article>
 								<article class="IndexLeftSideAdoptaionDays"></article>
