Combined form and results

--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -109,7 +109,7 @@
 										<label class="">
 											<h3>צבעים</h3>
 											<select name="dog_color">
-												<option value="all">הכול</option>
+												<option value="All">הכול</option>
 												<option value="ג׳ינג׳י">ג'ינג'י</option>
 												<option value="כהה">כהה</option>
 												<option value="צהוב">צהוב</option>
