--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -50,17 +50,35 @@
 						<div class="mainTop"></div>
 						<div class="mainContent">
 							<section class="IndexLeftSide">
+								<h2>אתם גם יכולים לעזור:</h2>
 								<article class="IndexLeftSideAdopt">
-									<a href="">
+									<a href="dogs_4_adoption.html">
 										<h4 class="header">אימוץ כלבים</h4>
 										<p class="paragraph">אימוץ כלבים, גורים, מבוגרים מכל הגזעים והסוגים - איך מתחילים?</p>
 									</a>
-									
-									
+								</article>								
+								<article class="IndexLeftSideVolenteer">
+									<a href="dogs_4_adoption.html">
+										<h4 class="header">דרושים מתנדבים</h4>
+										<p class="paragraph">רוצים לעזור לכלבים? אנחנו צריכים מתנדבים בכל חלקי הארץ?</p>
+									</a>									
 								</article>
-								<article class="IndexLeftSideVolenteer"></article>
-								<article class="IndexLeftSideAdoptaionDays"></article>
-								<article class="IndexLeftSideStore"></article>
+								<article class="IndexLeftSideAdoptaionDays">
+									<a href="dogs_4_adoption.html">
+										<h4 class="header">ימי אימוץ</h4>
+										<p class="paragraph">רשימת ימי אימוץ שבו תמצאו את החבר החדש לחיים שלכם</p>
+									</a>										
+								</article>
+								<article class="IndexLeftSideStore">
+									<a href="dogs_4_adoption.html">
+										<h4 class="header">חנות מזון לחיות של העמותה</h4>
+										<p class="paragraph">80% מרווח החנות נתרם להציל עוד כלבים! בעזרת המזון שתקנו תצילו חיים</p>
+									</a>										
+								</article>
+							</section>
+							
+							<section class="IndexRightSide">
+								<img class="banner" src="../../static/img/banner.png">
 							</section>
 						</div>
 						<div class="mainBtn"></div>
