--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -79,6 +79,10 @@
 							
 							<section class="IndexRightSide">
 								<img class="banner" src="../../static/img/banner.png">
+								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
+								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
+								<h4>ימי אימוץ: כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
+								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים? גלילה - 052-8808021 תעוז -050-3080807</p>
 							</section>
 						</div>
 						<div class="mainBtn"></div>
