--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -49,27 +49,27 @@
 					<div class="block">
 						<div class="mainTop"></div>
 						<div class="mainContent">
-							<section class="IndexLeftSide">
+							<section class="indexLeftSide">
 								<h2>אתם גם יכולים לעזור:</h2>
-								<article class="IndexLeftSideAdopt">
+								<article class="indexLeftSideAdopt">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">אימוץ כלבים</h4>
 										<p class="paragraph">אימוץ כלבים, גורים, מבוגרים מכל הגזעים והסוגים - איך מתחילים?</p>
 									</a>
 								</article>								
-								<article class="IndexLeftSideVolenteer">
+								<article class="indexLeftSideVolenteer">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">דרושים מתנדבים</h4>
 										<p class="paragraph">רוצים לעזור לכלבים? אנחנו צריכים מתנדבים בכל חלקי הארץ?</p>
 									</a>									
 								</article>
-								<article class="IndexLeftSideAdoptaionDays">
+								<article class="indexLeftSideAdoptaionDays">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">ימי אימוץ</h4>
 										<p class="paragraph">רשימת ימי אימוץ שבו תמצאו את החבר החדש לחיים שלכם</p>
 									</a>										
 								</article>
-								<article class="IndexLeftSideStore">
+								<article class="indexLeftSideStore">
 									<a href="dogs_4_adoption.html">
 										<h4 class="header">חנות מזון לחיות של העמותה</h4>
 										<p class="paragraph">80% מרווח החנות נתרם להציל עוד כלבים! בעזרת המזון שתקנו תצילו חיים</p>
@@ -77,7 +77,7 @@
 								</article>
 							</section>
 							
-							<section class="IndexRightSide">
+							<section class="indexRightSide">
 								<img class="banner" src="../../static/img/banner.png">
 								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
 								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
