--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -5,9 +5,11 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">	
 	    <title>Friends for Life</title>	
+	    <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 		<script src="../../static/js/modernizr.js"></script>
 		<link rel="stylesheet" href="../../static/style/style.css">
 		<link rel="stylesheet" href="../../static/style/styleMobile.css">
+
 	</head>
 	<body dir="rtl">	
 		<div id="outer-wrap">
@@ -16,10 +18,26 @@
 			        <div class="block">
 			            <a href="index.html"  id="logo"></a><!--Logo-->
 			            <a class="nav-btn" id="nav-open-btn" href="#nav">Book Navigation</a>
-			            <div id="contact">
-			                <span class="based">we're based in Limerick</span>
-			                <span class="number">call us  061 43 7777</span>
-			            </div>		    
+			            <!--<div id="contact">
+			                <span class="based">כניסה למערכת:</span>
+							<form name="login" action="index_submit" method="get" accept-charset="utf-8">
+							        <div class="number">
+							        	
+							        	<label for="usermail">Email</label>
+							        	<input type="email" name="usermail" placeholder="yourname@email.com" required>
+							        </div>
+							        <div class="number">
+							        	<label for="password">Password</label>
+							        	<input type="password" name="password" placeholder="password" required>
+							        </div>
+							        <input type="submit" value="Login"></li>
+							</form>			                
+			            </div>
+			            <span id="myButton" class="based">כניסה למערכת:&darr;</span>	-->
+			            <div id="content">
+							bla bla bla bla bla bla bla bla blabla bla blabla bla bla
+						</div>
+						<input type="button" id="myButton" value="Slide down ↓"/>	    
 					    <nav id="nav">
 				            <ul>
 				                <li class="navBtnAdopt">
@@ -81,8 +99,8 @@
 								<img class="banner" src="../../static/img/banner.png">
 								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
 								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
-								<h4>ימי אימוץ: כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
-								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים? גלילה - 052-8808021 תעוז -050-3080807</p>
+								<h4>י<b>מי אימוץ:</b> כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
+								<p>רוצים לאמץ כלב? רוצים להיות משפחה אומנת לכלבים?<br> גלילה - 052-8808021 תעוז -050-3080807</p>
 							</section>
 						</div>
 						<div class="mainBtn"></div>
@@ -92,5 +110,6 @@
 			</div><!--/#inner-wrap-->
 		</div><!--/#outer-wrap-->
 		<script src="../../static/js/main.js"></script>
+		<script src="../../static/js/script.js"></script>
 	</body>
 </html>
