last thing for today!

--- a/friends_forlife/app/templates/app/dogs_4_adoption.html
+++ b/friends_forlife/app/templates/app/dogs_4_adoption.html
@@ -50,7 +50,7 @@
 						<div class="mainTop"></div>
 						<div class="mainContent">
 				    		<h1>חיפוש כלבים לאימוץ</h1>
-					     		<form action="dogs_list" method="get" autocomplete="on">
+					     		<form action="dogs_list" method="get" autocomplete="on" class="adoptDogForm">
 									<section class="dog_search_first_section"> 
 										<label class="radio_botton_label">
 											<h3>מין</h3>
