--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -34,10 +34,14 @@
 							</form>			                
 			            </div>
 			            <span id="myButton" class="based">כניסה למערכת:&darr;</span>	-->
-			            <div id="content">
-							bla bla bla bla bla bla bla bla blabla bla blabla bla bla
+			            <div id="content" >
+							<form name="login" action="index_submit" method="get" class="loginForm">							        	
+							        	<input type="text" name="usermail" placeholder="User Name" required>
+							        	<input type="password" name="password" placeholder="password" required>
+							        	<input type="submit" value="Login">
+							</form>	
 						</div>
-						<input type="button" id="myButton" value="Slide down ↓"/>	    
+						<div id="contact1"><span id="myButton" class="based">כניסה למערכת</span></div>	    
 					    <nav id="nav">
 				            <ul>
 				                <li class="navBtnAdopt">
@@ -96,7 +100,7 @@
 							</section>
 							
 							<section class="indexRightSide">
-								<img class="banner" src="../../static/img/banner.png">
+								<img class="banner" src="../../static/img/main_photo.png">
 								<h2>עמותת חברים לחיים מצילה חיים בכל מחיר!</h2>
 								<h3>עמותת "חברים לחיים" הוקמה ע"י גלילה אבן חן, פועלת לחיפוש בתים מאמצים לכלבים. כל הכלבים נמסרים לאימוץ כשהם מחוסנים עם שבב ומעוקרים. הכלבים בריאים ושמחים והם ראויים לחיים ולא למוות!</h3>
 								<h4>י<b>מי אימוץ:</b> כל יום שישי 12-16:00 בצהריים, גן מאיר בת"א. גלילה מגיעה עם הכלבים המדהימים. מדי יום ניתן לתאם פגישה כדי לראות את הכלבים ולאמץ חבר לחיים.</h4>
