--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -64,14 +64,13 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
 
 
 /*=====Donation Banner===*/
-#contact { 
+#contact1 { 
 	background:url(../../static/img/background/contact-details.png) no-repeat;
 	width:213px;
 	height:62px;
 	padding:7px 10px 0px 10px;
 	text-align:center;
 	float:left;
-	display: none;
 }
 
 span.based {
@@ -188,6 +187,10 @@ span.number {
 /*=========================================*/
 /*=========== PAGE - ADOPT A DOG ===============*/ 
 /*=========================================*/
+
+.loginForm{
+	width:200px;
+}
 
 .indexRightSide{
 	width:400px;
@@ -312,7 +315,7 @@ input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-form{
+.adoptDogForm{
 
 	background: rgba(255, 255, 255, 0.5);
 	border-radius: 10px;
