--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -1,504 +1,42 @@
-*{margin:0; padding: 0;}
-/*=========================================*/
-/*=========== GENERAL SETTING ===============*/ 
-/*=========================================*/
-
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary {display: block;}
-
-a {text-decoration: none;}
-a:focus {outline: thin dotted;}
-a:active,a:hover{outline: 0;}
-
-
-@font-face{font-family: "trashimclm";src: url(trashimclm.ttf);}
-
-body {font-family: trashimclm; color: #333; background:#333333 url("../../static/img/background/body-bg-tile.jpg") bottom repeat; 
-  	  -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
-
-.clear{clear: both;}
-
-
-.block {
-  position: relative;
-  margin: 0 auto;
-}
-
-
-#outer-wrap {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-}
-
-#inner-wrap {
-  position: relative;
-  width: 100%;
-}
-
-
-.blueH{
-	font-weight:500px;
-	color:#729299;
-	display:block;
-	font-size:1.429em;
-	line-height:1.1em;
-	letter-spacing:-1px;
-	margin-bottom:4px;	
-}
-.whiteP{	
-	color:#f9f9f1;
-	font-size:1.429em;
-	letter-spacing:0.02em;
-	line-height:1.1em;
-	display:block;
-	}
-/*=========================================*/
-/*=========== HEADER SETTINGS ===============*/ 
-/*=========================================*/
-
-/*=====Logo===*/
-#logo{width: 425px; height: 175px; background:transparent url("../../static/img/logo_425_156.png") no-repeat;
-      display: block; float:right; 
-      z-index:1;
-      }
-
-
-/*=====Donation Banner===*/
-#contact1 { 
-	background:url(../../static/img/background/contact-details.png) no-repeat;
-	width:213px;
-	height:62px;
-	padding:7px 10px 0px 10px;
-	text-align:center;
-	float:left;
-}
-
-span.based {
-	font-weight:500px;
-	color:#729299;
-	display:block;
-	font-size:1.429em;
-	line-height:1.1em;
-	letter-spacing:-1px;
-	margin-bottom:4px;
-}
-
-span.number {
-	color:#f9f9f1;
-	font-family: "chunk-1","chunk-2",serif;
-	font-size:1.429em;
-	letter-spacing:0.02em;
-	line-height:1.1em;
-	display:block;
-}
-
-/*=====Navigator Settings===*/
-.close-btn {
-  display: block;
-  width: 2.625em;
-  height: 2.25em;
-  padding: 0;
-  border: 0;
-  outline: none;
-  background: url("../../static/img/buttons/close-btn.png") left center no-repeat;
-  background-size: 1.875em 1.875em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-indent: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.close-btn:focus, .close-btn:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-.nav-btn {
-  display: block;
-  width: 2.625em;
-  height: 2.25em;
-  padding: 0;
-  border: 0;
-  outline: none;
-  background:url("../../static/img/buttons/nav-icon.png") left center no-repeat;
-  background-size: 1.875em 1.5em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-indent: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.nav-btn:hover, .nav-btn:focus {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-  opacity: 1;
-}
-
-
-
-/*=========================================*/
-/*=========== GENERAL MAIN SETTINGS ===============*/ 
-/*=========================================*/
-
-#main .block {
-  padding: 2.625em 1.875em;
-}
-
-.mainTop{
-	background:url("../../static/img/background/main_top_bones.jpg") no-repeat;
-	width:980px;
-	height:69px;
-	display:block;
-}
-
-.mainContent{
-	background:url("../../static/img/background/main-content-tile.jpg") repeat-y;
-	width:920px;
-	overflow:hidden;
-	padding:40px 20px 0px 40px;
-}
-
-.mainBtn{
-	background:url("../../static/img/background/main-content-btm-curve.jpg") no-repeat;
-	height:33px;
-	display:block;
-	width:980px;	
-}
-
-.mainContent h1{
-	color:#3E5560;
-	font-size:34px; line-height:19px; margin:0 15px 0 10px;
-}
-/*=========================================*/
-/*=========== GENERAL FOOTER SETTINGS ===============*/ 
-/*=========================================*/
-
-#footer {	
-	background:url("../../static/img/background/footer_img.png") repeat-x #FFF;
-	padding:140px 0px 40px 00px;
-	margin:-70px 0px 0px 0px;
-	overflow:hidden;	
-}
-
-<<<<<<< HEAD
-/*=========================================*/
-/*=========== PAGE - ADOPT A DOG ===============*/ 
-/*=========================================*/
-
-.loginForm{
-	width:200px;
-}
-
-.indexRightSide{
-	width:400px;
-	float:right;	
-}
-.banner{
-	width:500px;
-	height:250px;
-	margin:50px 10px 0 0;
-	border-radius: 25px;
-}
-
-.indexRightSide h2{
-	color:#729299;
-	text-align:center;
-	margin: 20px 0 0 0;
-}
-.indexRightSide h3{
-	color:#77706b;
-	text-align:center;
-	margin: 20px 0 0 0;	
-}
-.indexRightSide h4{
-	color:#77706b;
-	text-align:center;
-	margin: 40px 0 0 0;	
-}
-.indexRightSide p{
-	font-size:16px;
-	color:#77706b;
-	text-align:center;
-	margin: 40px 0 0 0;	
-}
-.indexLeftSide{
-	width:400px;
-	float:left;
-	background-color: #fff;
-}
-.indexLeftSideAdoptaionDays, .indexLeftSideAdopt{
-	background:url("../../static/img/panels/rhs-comb-white-bg.jpg") no-repeat;
-	/*width:393px; height:168px;*/
-	width:160px; height:110px;
-	padding:39px 180px 0px 43px;
-	float:left;
-	margin: 20px 0 20px 0;
-}
-
-.indexLeftSideStore, .indexLeftSideVolenteer{
-	background:url("../../static/img/panels/rhs-pink-puppy.jpg") no-repeat;
-	width:160px; height:110px;
-	padding:39px 43px 0px 180px;
-	float:left;	
-}
-
-
-.indexLeftSideAdoptaionDays h4,.indexLeftSideAdopt h4{
-	text-align:center;
-	font-size:25px;
-	color:#7A8D90;
-	font-weight:bold;
-
-}
-.indexLeftSideAdoptaionDays p, .indexLeftSideAdopt p{
-	text-align:center;
-	font-size:14px;
-	color:#729299;	
-}
-
-.indexLeftSideStore h4, .indexLeftSideVolenteer h4{
-	text-align:center;
-	font-size:25px;
-	color:#AC6D76;
-	width:200px;
-	margin: 0 -20px 0 0;
-	font-weight:bold;	
-}
-.indexLeftSideStore p, .indexLeftSideVolenteer p{
-	text-align:center;
-	font-size:14px;
-	width:200px;
-	color:#DDB2BA;
-}
-.indexLeftSideStore p{margin:-2px -30px 0 0;}
-.indexLeftSideVolenteer p{margin:15px -20px 0 0;}
-
-
-=======
->>>>>>> a66220a2b470c331226dbb8839e8dfabbd223369
-
-/*=========================================*/
-/*=========== PAGE - ADOPT A DOG ===============*/ 
-/*=========================================*/
-
-
-
-/*forms buttons and inputs*/
-button,input,select,textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-}
-button,input {
-  line-height: normal;
-}
-button,html input[type="button"],input[type="reset"],input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],input[disabled] {cursor: default;}
-input[type="checkbox"],input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-.adoptDogForm{
-
-	background: rgba(255, 255, 255, 0.5);
-	border-radius: 10px;
-	border: rgba(255, 255, 255, 0.5) solid 5px;
-	width:70%;
-	margin: 5% 14% 0 0;
-}
-
-
-.dog_search_first_section
-{
-    float: right;
-	width: 35%;
-	margin: 5% 5% 5% 0%;
-	/*padding-bottom: 5%;*/
-	border: 4px solid;
-	border-color: #D9F3FF; 
-}
-
-.dog_search_second_section /*WEB*/
-{  
-	float: left;
-	width: 40%;
-	margin: 5% 5% 5% 5%;
-	border: 4px solid;
-	border-radius: 5px;
-	border-color: #D9F3FF; 
-}
-
-.dog_search_first_section label
-{
- 	float:right;
-  	padding: 10% 0% 10% 0;	
-}
-
-.dog_search_second_section label
-{
-
-
-  	/*padding: 5% 0 10% 0;
-  /*	margin: 5% 5% 5% 5%;*/	
-}
-
-
-
-/*=========================================*/
-/*=========== Desktop Adaption ===============*/ 
-/*=========================================*/
-
-
-@media screen and (min-width: 1046px) {
-
-	.block{
-	  max-width: 960px;	
-	}
-	#top > .block{	
-		background:url(../../static/img/background/border.png) bottom repeat-x;
-		height:150px;
-	}
-  #top .nav-btn {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-
-	#nav .close-btn {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-	}
-
-	#nav{
-	overflow:visible;
-	float:left;
-	width:1000px;
-	margin:-140px 0 0 -180px;
-	}
-
-
-	#nav .close-btn {
-	  display: none;
-	}
-
-	#nav ul {
-	  *zoom: 1;
-	  display: block;
-	}
-	#nav ul:before, #nav ul:after {
-	  content: "";
-	  display: table;
-	}
-	#nav ul:after {
-	  clear: both;
-	}
-	#nav li {
-	  display: block;
-	}
-
-	#nav a, #nav a:visited {
-		display:inline-block;
-		color:#756e68;
-		font-weight:500;
-		line-height: 1.28571em;
-		font-size:17px;
-		text-align:center;
-		height:29px;	
-		padding:12px 0px 0px 0px;
-	}
-#nav li a:focus, #nav li a:hover {
-  color: #fff;
-  background: rgba(255, 255, 255, 0.1);
-}
-#nav li.is-active a {
-  color: #fff;
-}
-
-  #nav ul {
-    text-align: center;   
-    z-index:999;
-    position:relative;
-    margin:60px 0 0 0;
-  }
-  #nav li {
-    display: inline-block;       
-  }
-  #nav li:last-child {
-    border-right: none;
-  }
-  #nav li a {
-    padding: 8px 18px;
-  }
-
-
-
-
-#nav li.is-active a, #nav a:hover {
-	color:#57514b;
-	text-decoration:none;
-	background:url(../../static/img/buttons/menu-tabs/right-brown.png) right top no-repeat;
-}
-
-#nav li.navBtnAdopt a { width:86px;}
-#nav li.navBtnAdopt.is-active a, #nav li.navBtnAdopt a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat;}
-
-#nav li.navBtnFoster a { width:100px; }
-#nav li.navBtnFoster.is-active a, #nav li.navBtnFoster a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn131.jpg) no-repeat;}
-
-#nav li.navBtnAbout a { width:84px; }
-#nav li.navBtnAbout.is-active a, #nav li.navBtnAbout a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat; }
-
-#nav li.navBtnDonate a { width:84px; }
-#nav li.navBtnDonate.is-active a, #nav li.navBtnDonate a:hover {background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat; }
-
-}
 
 /*Adi*/
-.picture
+/*#dog_div*/ .picture
 {
 	width: 30%;
 	margin-top: 5%;
 	margin-right: 5%;
+	position: relative;
 }
 .picture img
 {
 	width: 80%;
 }
 
-.picture p
+/*#dog_div*/
+ /*#dog_div*/.name
 {
-	width: 80%;
-	font-size: 25px;
+	
+	font-size: 23px;
+	color: #AC6D76;
 }
 
-#content{
-    display:none;
+/*#dog_div*/.age
+{
+	float: left;
+	display: inline; 
+	font-size: 15px;
+}
+
+/*#dog_div*/.gender
+{	
+	position: absolute;
+	top: 15%;
+	left: 5%;
+}
+
+/*#dog_div*/.description
+{
+	font-family: gisha;
+	font-size: 15px;
+	font-weight: lighter;
 }
