--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -13,28 +13,28 @@
 }
 
 /*#dog_div*/
- /*#dog_div*/.name
+#dog_div .name
 {
 	
 	font-size: 23px;
 	color: #AC6D76;
 }
 
-/*#dog_div*/.age
+#dog_div .age
 {
 	float: left;
 	display: inline; 
 	font-size: 15px;
 }
 
-/*#dog_div*/.gender
+#dog_div .gender
 {	
 	position: absolute;
 	top: 15%;
 	left: 5%;
 }
 
-/*#dog_div*/.description
+#dog_div .description
 {
 	font-family: gisha;
 	font-size: 15px;
