--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -64,7 +64,7 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
 
 
 /*=====Donation Banner===*/
-#contact1 { 
+#contact { 
 	background:url(../../static/img/background/contact-details.png) no-repeat;
 	width:213px;
 	height:62px;
