--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -41,7 +41,16 @@
 							        	<input type="submit" value="Login">
 							</form>	
 						</div>
-						<div id="contact1"><span id="myButton" class="based">כניסה למערכת</span></div>	    
+						<div id="contact">
+							<div id="1">
+							    My Content 1
+							</div>
+							
+							<div id="2" style="display:none;">
+							    My Dynamic Content
+							</div>						
+							<span id="btnClick" class="based">כניסה למערכת</span>
+						</div>	    
 					    <nav id="nav">
 				            <ul>
 				                <li class="navBtnAdopt">
