--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -480,47 +480,24 @@ input[type="search"]::-webkit-search-decoration {
 
 }
 
-/*=========================================*/
-/*=========== PAGE - DOG LIST ===============*/ 
-/*=========================================*/
-#dog_div .picture
+/*Adi*/
+.picture
 {
 	width: 30%;
 	margin-top: 5%;
 	margin-right: 5%;
-	position: relative;
 }
-#dog_div .picture img
+.picture img
 {
 	width: 80%;
 }
 
-
-#dog_div .name
+.picture p
 {
-	
-	font-size: 23px;
-	color: #AC6D76;
+	width: 80%;
+	font-size: 25px;
 }
 
-#dog_div .age
-{
-	float: left;
-	display: inline; 
-	font-size: 15px;
+#content{
+    display:none;
 }
-
-#dog_div .gender
-{	
-	position: absolute;
-	top: 15%;
-	left: 5%;
-}
-
-#dog_div .description
-{
-	font-family: gisha;
-	font-size: 15px;
-	font-weight: lighter;
-}
-
