index+style changes

--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -33,14 +33,18 @@
 							        <input type="submit" value="Login"></li>
 							</form>			                
 			            </div>
-			            <span id="myButton" class="based">כניסה למערכת:&darr;</span>	-->
-			            <div id="content" >
-							<form name="login" action="index_submit" method="get" class="loginForm">							        	
+			            <span id="myButton" class="based">כניסה למערכת:&darr;</span>	
+			            
+			            <div id="loginForm" >
+							<form name="login" action="index_submit" method="get" >							        	
 							        	<input type="text" name="usermail" placeholder="User Name" required>
 							        	<input type="password" name="password" placeholder="password" required>
 							        	<input type="submit" value="Login">
 							</form>	
-						</div>
+						</div>			            
+			            
+			            -->
+
 						<div id="contact">
 							<div id="1">
 							    My Content 1
