--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -59,31 +59,31 @@ body {font-family: trashimclm; color: #333; background:#333333 url("../../static
 /*=====Logo===*/
 #logo{width: 425px; height: 175px; background:transparent url("../../static/img/logo_425_156.png") no-repeat;
       display: block; float:right; 
-      z-index:1;
+      z-index:9999;
       }
 
 
-/*=====Donation Banner===*/
+/*=====Login Form===*/
 #contact { 
 	background:url(../../static/img/background/contact-details.png) no-repeat;
 	width:213px;
 	height:62px;
 	padding:7px 10px 0px 10px;
 	text-align:center;
-	float:left;
+	float:left;	
 }
 
-span.based {
-	font-weight:500px;
-	color:#729299;
-	display:block;
-	font-size:1.429em;
-	line-height:1.1em;
-	letter-spacing:-1px;
-	margin-bottom:4px;
+.based {
+	white-space:normal;
+	padding:10px 15px;font-size:17px;line-height:1.371;border-radius:6px;
+	color:#fff;background-color:#7A8D90; border: 0; outline: 0;
 }
 
-span.number {
+#btnClick:hover{
+	pointer:cursor;
+}
+
+.number {
 	color:#f9f9f1;
 	font-family: "chunk-1","chunk-2",serif;
 	font-size:1.429em;
@@ -402,8 +402,9 @@ input[type="search"]::-webkit-search-decoration {
 	#nav{
 	overflow:visible;
 	float:left;
-	width:1000px;
-	margin:-140px 0 0 -180px;
+	width:550px;
+	height:10px;
+	margin:-30px -180px 0 30px;
 	}
 
 
@@ -446,7 +447,6 @@ input[type="search"]::-webkit-search-decoration {
 
   #nav ul {
     text-align: center;   
-    z-index:999;
     position:relative;
     margin:60px 0 0 0;
   }
@@ -472,13 +472,13 @@ input[type="search"]::-webkit-search-decoration {
 #nav li.navBtnAdopt a { width:86px;}
 #nav li.navBtnAdopt.is-active a, #nav li.navBtnAdopt a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat;}
 
-#nav li.navBtnFoster a { width:100px; }
+#nav li.navBtnFoster a { width:100px;}
 #nav li.navBtnFoster.is-active a, #nav li.navBtnFoster a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn131.jpg) no-repeat;}
 
-#nav li.navBtnAbout a { width:84px; }
+#nav li.navBtnAbout a { width:84px;}
 #nav li.navBtnAbout.is-active a, #nav li.navBtnAbout a:hover { background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat; }
 
-#nav li.navBtnDonate a { width:84px; }
+#nav li.navBtnDonate a { width:84px;}
 #nav li.navBtnDonate.is-active a, #nav li.navBtnDonate a:hover {background:url(../../static/img/buttons/menu-tabs/navBtn118.jpg) no-repeat; }
 
 }
