--- a/friends_forlife/app/templates/app/index.html
+++ b/friends_forlife/app/templates/app/index.html
@@ -47,12 +47,12 @@
 			            -->
 
 						<div id="contact">
-							<div id="1">
+							<div id="loginBannerBeforeClick">
 								<button id="btnClick" class="based">כניסה למערכת</button>
 							</div>
 							
-							<div id="2" style="display:none;">
-								<form name="login" action="index_submit" method="get" class="loginForm">							        	
+							<div id="loginBannerAfterClick" style="display:none;">
+								<form name="login" action="index_submit" method="get">							        	
 								        	<input type="text" name="usermail" placeholder="שם משתמש" required>
 								        	<input type="password" name="password" placeholder="סיסמא" required>
 								        	<input type="submit" value="כניסה">
